convert image element to div with background image to prevent stretching

--- a/app/assets/stylesheets/song_upload_form.scss
+++ b/app/assets/stylesheets/song_upload_form.scss
@@ -114,6 +114,9 @@
 .upload-artwork {
   width: 260px;
   height: 260px;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 #artwork-input {
